# Task-Manager

./: .gitignore  CMakeLists.txt  LICENSE  base.cpp  base.hpp  base.ui  main.cpp  resource.qrc  task.cpp  task.hpp  task.ui  task_data.cpp  task_data.hpp  task_item_widget.cpp  task_item_widget.hpp
forms/: addproject.ui  base.ui  concreteproject.ui  settings.ui  task.ui
src/: addproject.cpp  addproject.hpp  base.cpp  base.hpp  concreteproject.cpp  concreteproject.hpp  database.cpp  database.hpp  main.cpp  settings.cpp  settings.hpp  task.cpp  task.hpp  task_data.hpp  task_enum.hpp  task_item_widget.cpp  task_item_widget.hpp
